Find Building Where Alice and Bob Can Meet